# smplchain

./: README.md  c_scale_5_octaves.txt  c_scale_5_octaves.txt.mid  c_scale_8_octaves.txt  c_scale_8_octaves.txt.mid  pyproject.toml  smplchain.py
